# rmi-energy-communities

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: docker-build-push.yml  repo2docker.yml  tox-pytest.yml
docker/: Dockerfile
docs/: conf.py  index.rst
notebooks/: brownfields.ipynb  coal_comm_viz.ipynb  create_unemployment.ipynb  naics_code_updates.ipynb  notebook.ipynb  patio_output.ipynb  qualified_employment_areas.ipynb
notebooks/files/: employment_patio.ipynb  patio_employment.csv  qualifying_employment_areas.csv  unemployment.csv
notebooks/other/other/: justice_40.ipynb
src/energy_comms/: __init__.py  cli.py  constants.py  coordinate.py  generate_qualifying_areas.py  helpers.py
src/energy_comms/extract/: LNS14000000.txt  LNU04000000.txt  __init__.py  bls.py  cps.ipynb  cps.py  create_maps.py  create_unemployment.ipynb  eia860.py  epa.py  la.area.txt  lau.ipynb  lau.py  mapping_areas.ipynb  mapping_brownfields.ipynb  msa_codes.py  msha.py  national_unemployment.csv  output_path.csv  qcew.ipynb  qcew_2010.py  qcew_2010_2013.py  qcew_2010_2021.py  qcew_2014_2021.py  qcew_area_titles.py  qcew_python_3x_example.py  qualified_employment_areas.ipynb  run_qcew.ipynb  test.ipynb
src/energy_comms/extract/tmp/: cb_2018_us_county_500k.shp.ea.iso.xml  cb_2018_us_county_500k.shp.iso.xml  tl_2019_us_cbsa.shp.ea.iso.xml  tl_2019_us_cbsa.shp.iso.xml
src/energy_comms/output/: __init__.py  basic_viz.py  create_maps.py  generate_qualifying_areas.py  get_qualifying_areas.py  qual_area_analysis.py
src/energy_comms/transform/: __init__.py  bls.py  cps.py  eia860.py  epa.py  msha.py  qcew_2010_2013.py  qcew_2010_2021_t.py
tests/: conftest.py
tests/integration/: console_scripts_test.py  dummy_test.py  etl_test.py
tests/test_inputs/: msa_sample.csv  non_msa_sample.csv  qcew_msa_sample.csv  qcew_nonmsa_sample.csv  qcew_raw_sample.csv  qcew_sample.csv  texas_census_state_df.csv  tx_al_census_state_df.csv
tests/unit/: bls_test.py  dummy_test.py  helpers_test.py
